use drop based anim based on shadertoy example

--- a/src/html/navbar.html
+++ b/src/html/navbar.html
@@ -1,6 +1,5 @@
 <section class="nav-left" data-page="home">
-  <img class="navbar-logo" src="/assets/navbar-logo.svg" />
-  <div class="logo-text"><span>Jellyfish Fab</span><span style="color: lightblue">.</span></div>
+  <div class="logo-text"><span>ZEER<span style="color: lightblue">-</span>IO</span></div>
 </section>
 <section class="nav-center"></section>
 <section class="nav-right">
