--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,8 +1,8 @@
 <h1 class="ml11">
     <span class="text-wrapper">
       <span class="line line1"></span>
-      <span class="letters">Design to inspire</span>
+      <span class="letters">Building for the Future</span>
     </span>
   </h1>
 
-<h2>Milan based design and engineering team</h2>
+<h2>Interdisciplinary Contracting Team</h2>
