make team page updates

--- a/src/html/navbar.html
+++ b/src/html/navbar.html
@@ -8,6 +8,6 @@
   <div class="navitem" id="workshops-navbtn" data-page="workshops">Workshops</div>
   <div class="navitem" id="services-navbtn" data-page="services">Services</div>
   <span class="navcollapse">
-    <span id="navexpand"><i class="fas fa-ellipsis-h"></i></span>
+    <span id="navexpand">MENU</span>
   </span>
 </section>
