--- a/src/html/vision.html
+++ b/src/html/vision.html
@@ -3,33 +3,12 @@
 <h1 class="ml14">
   <span class="text-wrapper">
     <span class="letters">
-      Glad you stopped by!
+      We are a multi-discplinary engineering and design team that<br/>
+      focuses on end-to-end product service systems, full stack software solutions, and advanced analytics.
     </span><br/>
-    <span class="letters">Checkout our offerings:</span>
   </span>
 </h1>
 
-
-<div class="offerings">
-  <span class="offering educational-offerings page-services">
-    <i class="fas fa-pen-alt"></i>
-    <div>
-      Design
-    </div>
-  </span>
-  <span class="offering engineering-offerings page-services">
-    <i class="fas fa-cogs"></i>
-    <div>
-      Engineering
-    </div>
-  </span>
-  <span class="offering educational-offerings page-workshops">
-    <i class="fas fa-graduation-cap"></i>
-    <div>
-      Education
-    </div>
-  </span>
-</div>
 <!-- <h2>
   We offer: design services, engineering services, and educational workshops
 </h2> -->
